--- a/templates/management/layout.html
+++ b/templates/management/layout.html
@@ -15,8 +15,8 @@
     <link href="{% static 'user/css/animate.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'user/css/main.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'user/fonts/icomoon/icomoon.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/circliful/circliful.css' %}">
-    <link rel="stylesheet" href="{% static 'css/flags/flag-icon-custom.css' %}">
+    <link rel="stylesheet" href="{% static 'user/css/circliful/circliful.css' %}">
+    <link rel="stylesheet" href="{% static 'user/css/flags/flag-icon-custom.css' %}">
     {% block stylesheets %}
       
     {% endblock stylesheets %}
@@ -28,106 +28,151 @@
 
 <body class="orange">
     <div class="sunrise-loading"></div>
-    <div class="vertical-nav">
-        <button class="collapse-menu"><i class="icon-dehaze"></i></button>
-        <div class="logo"><a href="index.html"><img src="{% static 'logo.png' %}" alt="Sunrise"></a></div>
-        <div class="user-info">
-            <div class="user-img"><img src="{% static 'user/img/user7.png' %}" alt="User Info"> <span class="likes-info">26</span></div>
-            <h5 class="user-name-o">Cassandra</h5>
-            <p class="profile-complete">Profile Complete - 78%</p>
-        </div>
-        <ul class="menu clearfix">
-            <li class="active selected"><a href="#"><i class="icon-graphic_eq"></i> <span
-                        class="menu-item">Dashboards</span> <span class="down-arrow"></span></a>
-                <ul>
-                    <li><a href="index.html" class="current">Overview</a></li>
-                    <li><a href="social-analytics.html">Social Analytics <span
-                                class="label label-danger">&nbsp;</span></a></li>
-                    <li><a href="product-analytics.html">Product Analytics</a></li>
-                    <li><a href="events.html">Events <span class="label label-success">&nbsp;</span></a></li>
-                </ul>
-            </li>
-            <li><a href="#"><i class="icon-devices_other"></i> <span class="menu-item">Layouts</span> <span
-                        class="down-arrow"></span></a>
-                <ul>
-                    <li><a href="custom-drag.html">Drag &amp; Drop Panels</a></li>
-                    <li><a href="default.html">Default Layout</a></li>
-                    <li><a href="offcanvas-layout.html">Off Canvas Layout</a></li>
-                    <li><a href="layout-sidebar.html">Layout Sidebar</a></li>
-                    <li><a href="grid-layout.html">Grid Layout</a></li>
-                    <li><a href="three-col-layout.html">Three Column Layout</a></li>
-                    <li><a href="two-col-layout.html">Two Column Layout</a></li>
-                </ul>
-            </li>
-            <li><a href="widgets.html"><i class="icon-ac_unit"></i> <span class="menu-item">Widgets</span></a></li>
-            <li><a href="timeline.html"><i class="icon-timeline"></i> <span class="menu-item">Timeline</span></a></li>
-            <li><a href="email.html"><i class="icon-av_timer"></i> <span class="menu-item">Email</span></a></li>
-            <li><a href="#"><i class="icon-pie_chart_outlined"></i> <span class="menu-item">Graphs</span> <span
-                        class="down-arrow"></span></a>
-                <ul>
-                    <li><a href="c3-graphs.html">C3 Graphs</a></li>
-                    <li><a href="graphs.html">Flot Graphs</a></li>
-                    <li><a href="google-graphs.html">Google Graphs</a></li>
-                    <li><a href="morris-graphs.html">Morris Graphs</a></li>
-                    <li><a href="maps.html">Maps</a></li>
-                </ul>
-            </li>
-            <li><a href="gallery.html"><i class="icon-monochrome_photos"></i> <span
-                        class="menu-item">Showcase</span></a></li>
-            <li><a href="#"><i class="icon-shopping_basket"></i> <span class="menu-item">Pages</span> <span
-                        class="down-arrow"></span></a>
-                <ul class="collapse">
-                    <li><a href="calendar.html">Calendar</a></li>
-                    <li><a href="invoice.html">Invoice</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                </ul>
-            </li>
-            <li><a href="#"><i class="icon-domain"></i> <span class="menu-item">Forms</span> <span
-                        class="down-arrow"></span></a>
-                <ul class="collapse">
-                    <li><a href="form-elements.html">Forms Inputs</a></li>
-                    <li><a href="wysiwyg-editor.html">WYSIWYG Editor</a></li>
-                </ul>
-            </li>
-            <li><a href="#"><i class="icon-style"></i> <span class="menu-item">UI Elements</span> <span
-                        class="down-arrow"></span></a>
-                <ul>
-                    <li><a href="components.html"><span>Components</span></a></li>
-                    <li><a href="buttons.html"><span>Buttons</span></a></li>
-                    <li><a href="notifications.html"><span>Notifications</span></a></li>
-                    <li><a href="panels.html"><span>Panels</span></a></li>
-                    <li><a href="tabs.html"><span>Tabs &amp; Accordians</span></a></li>
-                    <li><a href="modals.html"><span>Modals</span></a></li>
-                    <li><a href="icons.html"><span>Icons</span></a></li>
-                </ul>
-            </li>
-            <li><a href="#"><i class="icon-person_pin"></i> <span class="menu-item">User Profile</span> <span
-                        class="down-arrow"></span></a>
-                <ul>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="signup.html">SignUp</a></li>
-                    <li><a href="register.html">Register</a></li>
-                    <li><a href="forgot-pwd.html">Forgot Password</a></li>
-                    <li><a href="error.html">404</a></li>
-                </ul>
-            </li>
-            <li><a href="#"><i class="icon-border_all"></i> <span class="menu-item">Tables</span> <span
-                        class="down-arrow"></span></a>
-                <ul>
-                    <li><a href="tables.html">Tables</a></li>
-                    <li><a href="data-tables.html">Databar Tables<span class="label label-danger">&nbsp;</span></a></li>
-                    <li><a href="dynamic-tables.html">Dynamic Tables</a></li>
-                </ul>
-            </li>
-            <li><a href="typography.html"><i class="icon-format_color_text"></i> <span
-                        class="menu-item">Typography</span></a></li>
-        </ul>
-    </div>
     
+    {% include "management/inc/header.html" %}
+
+    <div class="dashboard-wrapper dashboard-wrapper-lg">
+        <header>
+            <ul class="pull-left" id="left-nav">
+                <li class="dropdown pull-left"><a href="#" id="drop6" role="button" class="dropdown-toggle"
+                        data-toggle="dropdown">
+                        <div class="msg-chats"><img src="{% static 'circled-logo.png' %}" alt="Chats"> <img class="add-user"
+                                src="{% static 'circled-logo.png' %}" alt="Chats"> <span class="info-label"></span></div>
+                    </a>
+                    <ul class="dropdown-menu fadeInUp animated messages">
+                        <li class="dropdown-header">What You Need To Do</li>
+                        <li>
+                            <div class="meeting-container">
+                                
+                                <div class="meeting-block">
+                                    <div class="meeting-with"><img src="{% static 'circled-logo.png' %}" alt="Sunrise Admin"></div>
+                                    <div class="meeting-personal">
+                                        <h5>Add more Post as You Can <span>@today</span></h5><span>Posts</span>
+                                    </div>
+                                </div>
+                                <div class="meeting-block">
+                                    <div class="meeting-with"><img src="{% static 'circled-logo.png' %}" alt="Sunrise Admin"></div>
+                                    <div class="meeting-personal">
+                                        <h5>Add more Post as You Can <span>@today</span></h5><span>Posts</span>
+                                    </div>
+                                </div>
+                                <div class="meeting-block">
+                                    <div class="meeting-with"><img src="{% static 'circled-logo.png' %}" alt="Sunrise Admin"></div>
+                                    <div class="meeting-personal">
+                                        <h5>Add more Post as You Can <span>@today</span></h5><span>Posts</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <div class="pull-right">
+                <ul id="mini-nav" class="clearfix">
+                    <li class="list-box dropdown hidden-xs"><a id="reviews" href="#" role="button"
+                            class="dropdown-toggle" data-toggle="dropdown"><i class="icon-globe2"></i> </a><span
+                            class="noti-label yellow-bg animated"></span>
+                        <ul class="dropdown-menu animated fadeInUp reviews">
+                            <li>
+                                <div class="user-pic clearfix"><img src="{% static 'circled-logo.png' %}" alt="User Image"></div>
+                                <div class="review-details clearfix">
+                                    <h4>Social Analytics <i class="icon-settings"></i></h4>
+                                    <h5 class="clearfix"><span class="left-info"><i class="icon-photo"></i> 389
+                                            views</span></h5>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="user-pic clearfix"><img src="{% static 'circled-logo.png' %}" alt="User Image"></div>
+                                <div class="review-details clearfix">
+                                    <h4>Product Analytics <i class="icon-settings"></i></h4>
+                                    <h5 class="clearfix"><span class="left-info"><i class="icon-photo"></i> 871
+                                            views</span></h5>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="user-pic clearfix"><img src="{% static 'circled-logo.png' %}" alt="User Image"></div>
+                                <div class="review-details clearfix">
+                                    <h4>Layouts <i class="icon-settings"></i></h4>
+                                    <h5 class="clearfix"><span class="left-info"><i class="icon-photo"></i> 775
+                                            views</span></h5>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="list-box dropdown hidden-xs"><a id="drop1" href="#" role="button" class="dropdown-toggle"
+                            data-toggle="dropdown"><i class="icon-notifications_active"></i> </a><span
+                            class="info-label blue-bg animated rubberBand">3</span>
+                        <ul class="dropdown-menu fadeInUp animated imp-notify">
+                            <li class="dropdown-header">You have 3 Tasks</li>
+                            <li class="clearfix">
+                                <div class="icon"><img src="{% static 'circled-logo.png' %}" alt="Sunrise Admin"></div>
+                                <div class="details"><strong class="text-danger">Byose Hano</strong> <span>Shaka Amakuru agezweho</span></div>
+                            </li>
+                            <li class="clearfix">
+                                <div class="icon"><img src="{% static 'circled-logo.png' %}" alt="Sunrise Admin"></div>
+                                <div class="details"><strong class="text-success">Byose Hano</strong> <span>Yashyiremo ukoresheje Menu ya New Post iri mur <b>Post Management</b></span></div>
+                            </li>
+                            <li class="clearfix">
+                                <div class="icon"><img src="{% static 'circled-logo.png' %}" alt="Sunrise Admin"></div>
+                                <div class="details"><strong class="text-info">Byose hano</strong> <span>Kora Share ya Post yawe uko ushoboye kugirango irusheho kugera kure hashoboka</span></div>
+                            </li>
+                            <li class="dropdown-footer">See all the notifications<i class="icon-arrow_forward"></i></li>
+                        </ul>
+                    </li>
+                    <li class="list-box dropdown hidden-xs"><a id="drop10" href="#" role="button"
+                            class="dropdown-toggle" data-toggle="dropdown"><i class="icon-circle-check"></i> </a><span
+                            class="info-label red-bg animated rubberBand">4</span>
+                        <ul class="dropdown-menu animated flipInY progress-stats">
+                            <li class="dropdown-header">7 way To make your Post popular</li>
+                            <li>
+                                <div class="progress-info"><strong class="text-danger">Unique</strong> <span>Make your Post Unique</span> <span class="pull-right text-danger">100%</span></div>
+                                <div class="progress progress-md no-margin">
+                                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20"
+                                        aria-valuemin="0" aria-valuemax="100" style="width: 100%"><span
+                                            class="sr-only">100% Complete</span></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="progress-info"><strong class="text-info">Latest</strong> <span>Shaka amakuru agezweho</span> <span class="pull-right">90%</span></div>
+                                <div class="progress progress-sm no-margin">
+                                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90"
+                                        aria-valuemin="0" aria-valuemax="100" style="width: 100%"><span
+                                            class="sr-only">100% Complete</span></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="progress-info"><strong class="text-warning">Writing Knowledge</strong> <span>Menya gukoresha uburyo bwo gushyiraho amakuru, ugize ikibazo wabaza.</span> <span class="pull-right">100%</span></div>
+                                <div class="progress progress-xs no-margin">
+                                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="100"
+                                        aria-valuemin="0" aria-valuemax="100" style="width: 100%"><span
+                                            class="sr-only">100% Complete (warning)</span></div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="progress-info"><span>Let us Move Forward</span> <span
+                                        class="pull-right text-success">Complete</span></div>
+                                <div class="progress progress-xs no-margin">
+                                    <div class="progress-bar progress-bar-success" role="progressbar"
+                                        aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                        <span class="sr-only">100% Complete (warning)</span></div>
+                                </div>
+                            </li>
+                            <li class="dropdown-footer">See all the notifications</li>
+                        </ul>
+                    </li>
+                    <li class="list-box dropdown hidden-xs"><a href="#"><i class="icon-exit_to_app"></i></a>
+                    </li>
+                    <li class="list-box hidden-lg hidden-md"><button type="button" id="toggleMenu"
+                            class="toggle-menu"><i class="icon-menu"></i></button></li>
+                </ul>
+            </div>
+            <div class="custom-search hidden-sm hidden-xs hidden-lg"><input type="text" class="search-query"
+                    placeholder="Search here ..."> <i class="icon-search4"></i></div>
+        </header>
     {% block content %}
       
     {% endblock content %}
+    </div>
 
     
     <script src="{% static 'user/js/jquery.js' %}"></script>
@@ -135,6 +180,8 @@
     <script src="{% static 'user/js/jquery-ui.js' %}"></script>
     <script src="{% static 'user/js/sparkline.js' %}"></script>
     <script src="{% static 'user/js/scrollup/jquery.scrollUp.js' %}"></script>
+    <script src="{% static 'user/js/custom.js' %}"></script>
+
     {% block javascripts %}
         <script src="{% static 'user/js/circliful/circliful.min.js' %}"></script>
         <script src="{% static 'user/js/circliful/circliful.custom.js' %}"></script>
@@ -143,7 +190,7 @@
         <script src="{% static 'user/js/jvectormap/gdp-data.js' %}"></script>
         <script src="{% static 'user/js/jvectormap/custom/world-map-markers.js' %}"></script>
     {% endblock javascripts %}
-    <script src="{% static 'user/js/custom.js' %}"></script>
+    
     <script src="{% static 'user/js/custom-overview.js' %}"></script>
 </body>
 <!-- Mirrored from bootstrap.gallery/sunrise-admin-feb26/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 12 Mar 2020 13:19:17 GMT -->
